# ComfyUI-Fluxtapoz

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: example_flow_edit.json  example_flux_reference.json  example_flux_regional.json  example_flux_unsampling.json  example_flux_unsampling_update.json  example_rf_edit_workflow.json  example_rf_edit_workflow_alternative.json  example_rf_fireflow.json  example_rf_inversion_stylization.json  example_rf_inversion_updated.json  example_rf_inversion_workflow.json  example_unsample_inject_workflow.json  reflux_workflow_example_updated.json
flux/: layers.py  model.py
nodes/: add_flow_flux_node.py  apply_pag_node.py  apply_rave_node.py  apply_ref_flux.py  apply_seg_node.py  attn_override_node.py  configure_modified_flux_node.py  flip_sigmas_node.py  flowedit_nodes.py  flux_deguidance_node.py  influx_model_pred_node.py  inverse_sampler_node.py  mix_noise_node.py  rectified_sampler_nodes.py  redux_apply_node.py  regional_cond_nodes.py  rf_edit_sampler_nodes.py
utils/: attn_bank.py  const.py  flow_attention.py  module_utils.py  noise_utils.py  rave_attention.py  rave_rope_attention.py  rave_utils.py
